--- a/example-flask-python3.6-index/Dockerfile
+++ b/example-flask-python3.6-index/Dockerfile
@@ -1,5 +1,7 @@
 FROM tiangolo/uwsgi-nginx-flask:python3.6
 
+RUN pip install matplotlib
+
 # If STATIC_INDEX is 1, serve / with /static/index.html directly (or the static URL configured)
 ENV STATIC_INDEX 1
 # ENV STATIC_INDEX 0
